--- a/hibernate/src/main/resources/hibernate.properties
+++ b/hibernate/src/main/resources/hibernate.properties
@@ -6,7 +6,7 @@ jakarta.persistence.jdbc.user=postgres
 jakarta.persistence.jdbc.password=password
 
 # Pool
-# hibernate.connection.pool_size=10
+hibernate.connection.pool_size=10
 
 # SQL statement logging
 hibernate.show_sql=true
