--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -34,6 +34,12 @@
             <version>1.18.38</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.13.0-M2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
