--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -40,6 +40,16 @@
             <version>5.13.0-M2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.1.0-alpha1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.19.0-rc2</version>
+        </dependency>
     </dependencies>
 
     <build>
