--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -34,17 +34,26 @@
             <version>1.18.38</version>
             <scope>provided</scope>
         </dependency>
+        <!--Testing-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.13.0-M2</version>
             <scope>test</scope>
         </dependency>
+        <!--Logging-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.1.0-alpha1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>3.0.0-beta2</version>
+            <scope>compile</scope>
+        </dependency>
+        <!--JSON-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
