--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -24,6 +24,12 @@
             <version>42.7.5</version>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>7.0.0.Beta5</version>
