--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>spring-context</artifactId>
             <version>7.0.0-M4</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
