--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jdbc</module>
         <module>hibernate</module>
         <module>spring</module>
+        <module>spring-boot</module>
     </modules>
 
     <properties>
