--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -8,3 +8,5 @@ db.hosts=localhost,127.0.0.1
 #spring.profiles.active=web
 
 logging.level.root=info
+logging.file.name=spring-boot.log
+logging.file.path=/spring-boot/logs
