Data JPA Starter

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -10,3 +10,12 @@ db.hosts=localhost,127.0.0.1
 logging.level.root=info
 logging.file.name=spring-boot.log
 logging.file.path=/spring-boot/logs
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_dm_db
+spring.datasource.username=postgres
+spring.datasource.password=password
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
