--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -8,6 +8,7 @@ db.hosts=localhost,127.0.0.1
 #spring.profiles.active=web
 
 logging.level.root=info
+logging.level.org.springframework.jdbc.core=TRACE
 logging.file.name=spring-boot.log
 logging.file.path=/spring-boot/logs
 
