--- a/spring-boot/src/test/resources/application-test.properties
+++ b/spring-boot/src/test/resources/application-test.properties
@@ -1,6 +1,10 @@
 db.username=test
 db.password=test
 
+spring.datasource.url=jdbc:h2:mem:test_mem
+spring.datasource.username=
+spring.datasource.password=
+
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 
