--- a/spring-boot/src/test/resources/application-test.properties
+++ b/spring-boot/src/test/resources/application-test.properties
@@ -1,9 +1,9 @@
 db.username=test
 db.password=test
 
-spring.datasource.url=jdbc:h2:mem:test_mem
-spring.datasource.username=
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:test_mem
+spring.datasource.username=test
+spring.datasource.password=test
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
