--- a/spring-boot/src/test/resources/application-test.properties
+++ b/spring-boot/src/test/resources/application-test.properties
@@ -5,6 +5,6 @@ db.password=test
 spring.datasource.username=test
 spring.datasource.password=test
 
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=validate
 
 
