--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -81,6 +81,10 @@
             <artifactId>querydsl-apt</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.38</version>
