--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>spring-boot</artifactId>
-    <packaging>war</packaging>
+<!--    <packaging>war</packaging>-->
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
@@ -48,6 +48,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -103,6 +107,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
