--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -7,7 +7,8 @@ db.hosts=localhost,127.0.0.1
 
 #spring.profiles.active=web
 
-logging.level.root=info
+# TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
+logging.level.root=INFO
 logging.level.org.springframework.jdbc.core=TRACE
 logging.file.name=spring-boot.log
 logging.file.path=/spring-boot/logs
