--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.jpa.open-in-view=false
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.mvc.format.date=iso
+
+#app.image.bucket=/spring-boot/images/
