--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -30,3 +30,7 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.format.date=iso
 
 #app.image.bucket=/spring-boot/images/
+
+#spring.security.oauth2.client.registration.google.client-id=
+#spring.security.oauth2.client.registration.google.client-secret=
+#spring.security.oauth2.client.registration.google.redirectUri=
