OAuth 2.0. Authentication Principle

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -33,4 +33,4 @@ spring.mvc.format.date=iso
 
 #spring.security.oauth2.client.registration.google.client-id=
 #spring.security.oauth2.client.registration.google.client-secret=
-#spring.security.oauth2.client.registration.google.redirectUri=
+#spring.security.oauth2.client.registration.google.redirectUri=http://localhost:8080/api/v1/login/oauth2/code/google
